--- a/PharmaWeb/PharmaWeb.csproj
+++ b/PharmaWeb/PharmaWeb.csproj
@@ -277,6 +277,8 @@
     <Content Include="Views\Pharma\Index.cshtml" />
     <Content Include="Views\Pharma\Create.cshtml" />
     <Content Include="Views\Pharma\Delete.cshtml" />
+    <Content Include="Views\Pharma\Details.cshtml" />
+    <Content Include="Views\Pharma\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
