deleted extra files

--- a/PharmaWebAPI/PharmaWebAPI/PharmaWebAPI.csproj
+++ b/PharmaWebAPI/PharmaWebAPI/PharmaWebAPI.csproj
@@ -384,6 +384,8 @@
           <DevelopmentServerPort>55754</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>https://localhost:44377/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>https://localhost:44377/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
